# remote-procedure-call-service

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  a1_lib.c  a1_lib.h  backend.c  frontend.c  linked_list.c  linked_list.h  message.h
